@@ -8,53 +8,55 @@
 #ifndef __HX2_PROGS_H
 #define __HX2_PROGS_H
 
-#include "pr_comp.h"			// defs shared with qcc
-#include "progdefs.h"			// generated by program cdefs
+#include "pr_comp.h"	/* defs shared with qcc */
+#include "progdefs.h"	/* generated by program cdefs */
 
 typedef union eval_s
 {
-	string_t		string;
-	float			_float;
-	float			vector[3];
-	func_t			function;
-	int				_int;
-	int				edict;
+	string_t	string;
+	float		_float;
+	float		vector[3];
+	func_t		function;
+	int		_int;
+	int		edict;
 } eval_t;
 
 #define	MAX_ENT_LEAFS	16
 typedef struct edict_s
 {
 	qboolean	free;
-	link_t		area;			// linked to a division node or leaf
+	link_t		area;			/* linked to a division node or leaf */
 
-	int			num_leafs;
+	int		num_leafs;
 	short		leafnums[MAX_ENT_LEAFS];
 
 	entity_state_t	baseline;
 
-	float		freetime;		// sv.time when the object was freed
-	float		alloctime;		// sv.time when the object was allocated
-	entvars_t	v;			// C exported fields from progs
+	float		freetime;		/* sv.time when the object was freed */
+	float		alloctime;		/* sv.time when the object was allocated */
+	entvars_t	v;			/* C exported fields from progs */
 
-	// other fields from progs come immediately after
+	/* other fields from progs come immediately after */
 } edict_t;
 
-#define	EDICT_FROM_AREA(l) STRUCT_FROM_LINK(l,edict_t,area)
+#define	EDICT_FROM_AREA(l)	STRUCT_FROM_LINK(l,edict_t,area)
 
 //============================================================================
 
-extern	dprograms_t		*progs;
-extern	dfunction_t		*pr_functions;
-extern	dstatement_t		*pr_statements;
-extern	globalvars_t		*pr_global_struct;
+extern	dprograms_t	*progs;
+extern	dfunction_t	*pr_functions;
+extern	dstatement_t	*pr_statements;
+extern	globalvars_t	*pr_global_struct;
+#if !defined(H2W)
+extern	qboolean	is_progdefs111;	/* whether we have a Hexen2-v1.11 globals struct */
 extern	globalvars_v111_t	*pr_global_struct_v111;
-extern	qboolean		is_progdefs111;	// whether we have a Hexen2-v1.11 globals struct
 #define	PR_GLOBAL_STRUCT(parm)	(is_progdefs111 ? (pr_global_struct_v111->parm) : (pr_global_struct->parm))
-extern	float			*pr_globals;	// same as pr_global_struct
+#else	/* H2W */
+#define	PR_GLOBAL_STRUCT(parm)	(pr_global_struct->parm)
+#endif	/* H2W */
+extern	float		*pr_globals;	/* same as pr_global_struct */
 
-extern	int			pr_edict_size;	// in bytes
-
-//============================================================================
+extern	int		pr_edict_size;	/* in bytes */
 
 
 /*	If USE_MULTIPLE_PROGS is defined as 1, the hexen2 binary will look for
@@ -73,13 +75,12 @@ extern	int			pr_edict_size;	// in bytes
 */
 #define	USE_MULTIPLE_PROGS	1
 
-// USE_MULTIPLE_PROGS is only for original hexen2...
+/* USE_MULTIPLE_PROGS is only for original hexen2 */
 #if defined(H2W)
 #undef	USE_MULTIPLE_PROGS
 #define	USE_MULTIPLE_PROGS	0
 #endif
 
-//============================================================================
 
 void PR_Init (void);
 
@@ -106,36 +107,35 @@ void ED_ParseGlobals (const char *data);
 
 void ED_LoadFromFile (const char *data);
 
-//define EDICT_NUM(n) ((edict_t *)(sv.edicts+ (n)*pr_edict_size))
-//define NUM_FOR_EDICT(e) (((byte *)(e) - sv.edicts)/pr_edict_size)
-
+/*
+#define EDICT_NUM(n)		((edict_t *)(sv.edicts+ (n)*pr_edict_size))
+#define NUM_FOR_EDICT(e)	(((byte *)(e) - sv.edicts) / pr_edict_size)
+*/
 edict_t *EDICT_NUM(int n);
 int NUM_FOR_EDICT(edict_t *e);
 
-#define	NEXT_EDICT(e) ((edict_t *)( (byte *)e + pr_edict_size))
+#define	NEXT_EDICT(e)		((edict_t *)( (byte *)e + pr_edict_size))
 
-#define	EDICT_TO_PROG(e) ((byte *)e - (byte *)sv.edicts)
-#define PROG_TO_EDICT(e) ((edict_t *)((byte *)sv.edicts + e))
+#define	EDICT_TO_PROG(e)	((byte *)e - (byte *)sv.edicts)
+#define PROG_TO_EDICT(e)	((edict_t *)((byte *)sv.edicts + e))
 
-//============================================================================
+#define	G_FLOAT(o)		(pr_globals[o])
+#define	G_INT(o)		(*(int *)&pr_globals[o])
+#define	G_EDICT(o)		((edict_t *)((byte *)sv.edicts+ *(int *)&pr_globals[o]))
+#define G_EDICTNUM(o)		NUM_FOR_EDICT(G_EDICT(o))
+#define	G_VECTOR(o)		(&pr_globals[o])
+#define	G_STRING(o)		(PR_GetString(*(string_t *)&pr_globals[o]))
+#define	G_FUNCTION(o)		(*(func_t *)&pr_globals[o])
 
-#define	G_FLOAT(o) (pr_globals[o])
-#define	G_INT(o) (*(int *)&pr_globals[o])
-#define	G_EDICT(o) ((edict_t *)((byte *)sv.edicts+ *(int *)&pr_globals[o]))
-#define G_EDICTNUM(o) NUM_FOR_EDICT(G_EDICT(o))
-#define	G_VECTOR(o) (&pr_globals[o])
-#define	G_STRING(o) (PR_GetString(*(string_t *)&pr_globals[o]))
-#define	G_FUNCTION(o) (*(func_t *)&pr_globals[o])
-
-#define	E_FLOAT(e,o) (((float*)&e->v)[o])
-#define	E_INT(e,o) (*(int *)&((float*)&e->v)[o])
-#define	E_VECTOR(e,o) (&((float*)&e->v)[o])
-#define	E_STRING(e,o) (PR_GetString(*(string_t *)&((float*)&e->v)[o]))
+#define	E_FLOAT(e,o)		(((float*)&e->v)[o])
+#define	E_INT(e,o)		(*(int *)&((float*)&e->v)[o])
+#define	E_VECTOR(e,o)		(&((float*)&e->v)[o])
+#define	E_STRING(e,o)		(PR_GetString(*(string_t *)&((float*)&e->v)[o]))
 
 extern	int		type_size[8];
 
 typedef void (*builtin_t) (void);
-extern	builtin_t *pr_builtins;
+extern	builtin_t	*pr_builtins;
 extern	int		pr_numbuiltins;
 
 extern	int		pr_argc;
@@ -144,7 +144,13 @@ extern	qboolean	pr_trace;
 extern	dfunction_t	*pr_xfunction;
 extern	int		pr_xstatement;
 
-extern	unsigned short		pr_crc;
+extern	unsigned short	pr_crc;
+
+#if defined(H2W)
+extern	func_t		SpectatorConnect;
+extern	func_t		SpectatorThink;
+extern	func_t		SpectatorDisconnect;
+#endif	/* H2W */
 
 void PR_RunError (const char *error, ...) __attribute__((__format__(__printf__,1,2), __noreturn__));
 
@@ -153,7 +159,7 @@ void ED_PrintNum (int ent);
 
 eval_t *GetEdictFieldValue(edict_t *ed, const char *field);
 
-extern	cvar_t	max_temp_edicts;
+extern	cvar_t		max_temp_edicts;
 
 extern	qboolean	ignore_precache;
 
